View Issue Details

IDProjectCategoryView StatusLast Update
0022535Open CASCADEOCCT:Data Exchangepublic2013-12-19 13:57
ReporterssvAssigned Tobugmaster  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
OSAll 
Target Version6.7.0Fixed in Version6.7.0 
Summary0022535: Cut sphere: invalid shape after reading from STEP
DescriptionThe attached shape is a result of boolean cut operation between sphere and
cylinder. While it is correctly exported to STEP, the import operation produces
incorrect parametric representation of the face (see pcurve.png screenshot).
TagsNo tags attached.
Test case numberbugs xde(005) bug22535_1, bug22535_2

Attached Files

  • fsphere_cyl2.stp (16,913 bytes)
  • pcurve.png (7,512 bytes)
  • sphere_cyl2_cut.brep (8,003 bytes)
  • cut_comp.brep (12,824 bytes)
  • U6 (837 bytes)
  • U7 (831 bytes)

Activities

2011-05-25 13:23

 

fsphere_cyl2.stp (16,913 bytes)

2011-05-25 13:23

 

pcurve.png (7,512 bytes)

2011-05-25 15:58

 

sphere_cyl2_cut.brep (8,003 bytes)

2011-05-25 16:16

 

cut_comp.brep (12,824 bytes)

bugmaster

2011-09-13 14:09

administrator   ~0018120

Dear MKV,

Please create testing cases as it requested by SSV

apn

2012-02-28 15:56

administrator   ~0019805

Test case for this bug are
chl 934 U6 (for sphere_cyl2_cut.brep)
chl 934 U7 (for cut_comp.brep)
Test cases are BAD.
___________________________________________
convert from brep to step by DRAW commands:
testwritestep /tmp/aaa.stp a
stepread /tmp/aaa.stp b *
___________________________________________
We get wrong result of boolean cut operation between sphere and cylinder.

apn

2012-02-28 15:56

administrator  

U6 (837 bytes)

apn

2012-02-28 15:56

administrator  

U7 (831 bytes)

bugmaster

2012-03-01 13:04

administrator   ~0019832

Test case gives wrong result

ika

2013-08-05 16:07

manager   ~0025231

In cutting sphere it's seam edge was divided into two parts(by cylinder), but pcurves of the second were not shifted during shape healing.

Branch CR22535 is ready to be reviewed.

Dear PDN,
Please review.
link to gitweb: http://git.dev.opencascade.org/gitweb/?p=occt.git;a=commitdiff;h=60eb9a762398e01de64406815dfe3f71fc7efb21

pdn

2013-08-05 17:04

reporter   ~0025234

OK, please test

mkv

2013-08-06 18:45

tester   ~0025250

Dear BugMaster,

Branch CR22535 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: 60eb9a762398e01de64406815dfe3f71fc7efb21

Number of compiler warnings:

occt component :
Linux: 945 (947 on master)
Windows: 891 (891 on master)

products component :
Linux: 188 (188 on master)
Windows: 287 (287 on master)

Regressions:
http://occt-tests/CR22535-master-occt/Debian60-64/summary.html
http://occt-tests/CR22535-master-occt/Windows-32-VC9/summary.html
de iges_2(002) H1
de step_1(004) J6

Improvements:
No improvements

Testing cases:
bugs xde(005) bug22535_1, bug22535_2 - OK.

Testing on Linux:
Total MEMORY difference: 363518156 / 363506536
Total CPU difference: 47374.09000000104 / 43410.25000000052

Testing on Windows:

There are following differences in images found by testdiff.
http://occt-tests/CR22535-master-occt/Debian60-64/diff-Debian60-64.html
http://occt-tests/CR22535-master-occt/Windows-32-VC9/diff-Windows-32-VC9.html
STATUS bugs xde bug22535_1: OK / BAD
STATUS bugs xde bug22535_2: OK / BAD
IMAGE bugs xde bug2: bug22535_2_Driver1_Viewer1_View1.png differs
IMAGE bugs xde bug2: bug22535_1_Driver1_Viewer1_View1.png differs


Dear ika,
test cases bugs xde(005) bug22535_1, bug22535_2 are corrected, please validate its.

ika

2013-08-07 12:17

manager   ~0025261

Dear MKV,

de iges_2 H1 is not regression, but improvement, because STATSHAPE was fixed, so reference data changed.

de step_1 J6 is bad file with tolerance = 1562, and one of it's invalid wires was not detected before fix, it leads to changes in number of faces, so it is not a regression too.

I think, that scripts should be updated.

Test cases are good now, the problem was in compounds (compound with only one shape is deleted during reading step) and in specialty of creation the second case where some vertices are one shape, but with different locations.

mkv

2013-08-09 12:35

tester   ~0025279

Dear BugMaster,
Test cases de/iges_2(002)/H1 and de/step_1(004)/J6 are correcred and pushed to git repository.

Related Changesets

occt: master 60295241

2013-08-15 11:28:19

ika


Committer: bugmaster Details Diff
0022535: Cut sphere: invalid shape after reading from STEP
In cutting sphere it's seam edge was divided into two parts(by cylinder),
but pcurves of the second were not shifted during shape healing.
Test cases correction
Affected Issues
0022535
mod - src/ShapeFix/ShapeFix_Wire.cxx Diff File
mod - tests/bugs/xde/bug22535_1 Diff File
mod - tests/bugs/xde/bug22535_2 Diff File

Issue History

Date Modified Username Field Change
2011-08-02 11:12 bugmaster Category OCCT:DTE => OCCT:Data Exchange
2011-09-13 14:09 bugmaster Note Added: 0018120
2011-09-13 14:09 bugmaster Assigned To bugmaster => mkv
2011-09-13 14:09 bugmaster Status new => assigned
2012-02-07 11:52 bugmaster Status assigned => feedback
2012-02-17 16:51 mkv Assigned To mkv => apn
2012-02-17 16:51 mkv Fixed in Version EMPTY =>
2012-02-17 16:51 mkv Description Updated
2012-02-28 15:56 apn Note Added: 0019805
2012-02-28 15:56 apn File Added: U6
2012-02-28 15:56 apn File Added: U7
2012-02-28 15:57 apn Test case number => chl 934 U6 U7
2012-02-28 16:01 apn Assigned To apn => bugmaster
2012-03-01 13:04 bugmaster Note Added: 0019832
2012-03-01 13:04 bugmaster Assigned To bugmaster => abv
2012-03-01 13:04 bugmaster Status feedback => assigned
2013-04-29 09:27 abv Assigned To abv => ika
2013-08-05 16:07 ika Note Added: 0025231
2013-08-05 16:07 ika Assigned To ika => pdn
2013-08-05 16:07 ika Status assigned => resolved
2013-08-05 17:04 pdn Note Added: 0025234
2013-08-05 17:04 pdn Status resolved => reviewed
2013-08-05 17:40 mkv Assigned To pdn => mkv
2013-08-06 18:45 mkv Note Added: 0025250
2013-08-06 18:46 mkv Test case number chl 934 U6 U7 => bugs xde(005) bug22535_1, bug22535_2
2013-08-06 18:46 mkv Assigned To mkv => ika
2013-08-06 18:46 mkv Status reviewed => assigned
2013-08-07 12:17 ika Note Added: 0025261
2013-08-07 12:17 ika Status assigned => feedback
2013-08-07 12:18 ika Assigned To ika => mkv
2013-08-09 12:35 mkv Note Added: 0025279
2013-08-09 12:36 mkv Assigned To mkv => bugmaster
2013-08-09 12:36 mkv Status feedback => tested
2013-08-17 12:50 bugmaster Changeset attached => occt master 60295241
2013-08-17 12:50 bugmaster Status tested => verified
2013-08-17 12:50 bugmaster Resolution open => fixed
2013-08-21 14:49 bugmaster Target Version => 6.7.0
2013-12-19 13:52 bugmaster Status verified => closed
2013-12-19 13:57 bugmaster Fixed in Version => 6.7.0