0022535: Cut sphere: invalid shape after reading from STEP In cutting sphere it's seam edge was divided into two parts(by cylinder), but pcurves of  the second were not shifted during shape healing. Test cases correction